Fixed dialog metadata position on IE

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_documentExecution.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_documentExecution.scss
@@ -321,4 +321,9 @@
 			}
 		}
 	}
+	.metadataDialog {
+		position: absolute;
+		top: 20%;
+		left: 175px;
+	}
 }
